--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "startTanner": "npx expo start --dev-client --tunnel --clear"
   },
   "dependencies": {
+    "@expo/ui": "~0.2.0-beta.7",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-vector-icons/material-design-icons": "^12.4.0",
@@ -32,6 +33,7 @@
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "^0.1.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
