feat: Added varient code

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-BASE_URL=https://api.expo-pilot.com/v1
-SOCKET_URL=https://api.expo-pilot.com/ws
-WEB_CLIENT_ID_GOOGLE=""
-GOOGLE_PLACES_API_KEY=""
-SENTRY_URL=""
+APP_VARIANT=development
